Feat: gameIdDto 수정 #14